# embot

./: .gitignore  .replit  AUTH.md  GITHUB_SETUP.md  HOSTING.md  README.md  pyproject.toml  run.py
attached_assets/: Pasted--Hell-EmBot-vagyok-Sok-parancsom-van-pr-b-lj-ki-p-rat-Alap-parancsok-help-M-1740223048103.txt  Pasted--Hell-EmBot-vagyok-Sok-parancsom-van-pr-b-lj-ki-p-rat-Alap-parancsok-help-M-1740223279413.txt
bot/: config.py  main.py
bot/cogs/: ai_commands.py  basic_commands.py  fun_commands.py  mod_commands.py
bot/utils/: logger.py  permissions.py
